third_party/blink/renderer/core/workers/parent_execution_context_task_runners.cc
@@ -30,9 +30,10 @@ ParentExecutionContextTaskRunners::ParentExecutionContextTaskRunners(
   // For now we only support very limited task types. Sort in the TaskType enum
   // value order.
   for (auto type : {TaskType::kNetworking, TaskType::kPostedMessage,
-                    TaskType::kInternalDefault, TaskType::kInternalLoading,
-                    TaskType::kInternalTest, TaskType::kInternalMedia,
-                    TaskType::kInternalInspector, TaskType::kInternalWorker}) {
+                    TaskType::kWorkerAnimation, TaskType::kInternalDefault,
+                    TaskType::kInternalLoading, TaskType::kInternalTest,
+                    TaskType::kInternalMedia, TaskType::kInternalInspector,
+                    TaskType::kInternalWorker}) {
     auto task_runner =
         context ? context->GetTaskRunner(type)
                 : Platform::Current()->CurrentThread()->GetTaskRunner();
