third_party/blink/renderer/core/workers/worker_animation_frame_provider.h
@@ -62,6 +62,10 @@ class CORE_EXPORT WorkerAnimationFrameProvider
   // not hold strong references.
   Vector<UntracedMember<OffscreenCanvas>> offscreen_canvases_;
   bool in_begin_frame_;
+
+  Member<ExecutionContext> context_;
+
+  base::WeakPtrFactory<WorkerAnimationFrameProvider> weak_factory_;
 };
 
 }  // namespace blink
